<resources>
    <string name="app_name">GamersRL_Meetup</string>

    <string name="start_page_activity_name">WELCOME TO GAMERSRL MEETUP</string>
    <string name="to_login_button_text">Login</string>
    <string name="to_signup_button_text">Signup</string>

    <string name="game_page_activity_name">Game Page</string>


    <!-- Strings for the Games List page -->
    <string name="frag_gameslist_header">Games List</string>
    <string name="frag_gameslist_addgamerequest_button_text">Request a Game to be Added</string>

    <!-- Strings for the filters -->
    <string name="filter_header">Filter</string>
    <string name="filter_ok_text">Apply</string>
    <string name="filter_cancel_text">Cancel</string>
    <string name="game_filter_developer_header">Developer</string>
    <string name="game_filter_developer_prompt">Select Developer</string>
    <string name="game_filter_publisher_header">Publisher</string>
    <string name="game_filter_publisher_prompt">Select Publisher</string>
    <string name="game_filter_approved_header">Approved Status</string>
    <string name="game_filter_approved_prompt">Select Approved status</string>
    <string name="game_filter_numberofplayers_header">Number of Players</string>
    <string name="game_filter_minmaxplayers_prompt">Select number of players</string>
    <string name="game_filter_minplayers_header">Minimum Players</string>
    <string name="game_filter_maxplayers_header">Maximum Players</string>

    <!-- Strings for the Game Details page -->
    <string name="activity_gamedetails_header">Game Details Page</string>
    <string name="activity_gamedetails_approvegamerequest_button_text">Approve Game Request</string>
    <string name="activity_gamedetails_deletegame_button_text">Remove Game</string>
    <string name="activity_gamedetails_updategamerequest_button_text">Update Game</string>

    <!-- Strings for the Add Game Request page -->
    <string name="activity_addgamerequest_header">Request a Game to be Added</string>

    <!-- Strings for the Update Game page -->
    <string name="activity_updategame_header">Update Game</string>

    <!-- Strings for the Add Game Request/Update Game pages -->
    <string name="activity_add_update_game_instructions">Enter Game Details</string>
    <string name="activity_add_update_game_input_hint_title">Enter the title</string>
    <string name="activity_add_update_game_input_hint_description">Enter the description</string>
    <string name="activity_add_update_game_input_hint_releasedate">Enter the release date as MM/DD/YYYY</string>
    <string name="activity_add_update_game_input_hint_developer">Enter the developer</string>
    <string name="activity_add_update_game_input_hint_publisher">Enter the publisher</string>
    <string name="activity_add_update_game_input_hint_minplayers">Enter the minimum number of players</string>
    <string name="activity_add_update_game_input_hint_maxplayers">Enter the maximum number of players</string>
    <string name="activity_add_update_game_input_hint_approved">Enter the Approved status</string>

    <!-- Strings for the Settings page -->
    <string name="frag_settings_header">Settings</string>
    <string name="frag_settings_instructions">Pick your preferred appearance</string>
    <string name="frag_settings_lightmode">Light Mode</string>
    <string name="frag_settings_darkmode">Dark Mode</string>
    <string name="frag_settings_clearsharedpreferences">Clear Shared Preferences</string>

    <!-- Strings for the Events page -->
    <string name="frag_events_header">Events</string>

    <!-- General strings for the list page -->
    <string name="list_item_view_button_text">View</string>
    <string name="list_page_filter_button">Filter</string>

    <!-- General Strings for the Games -->
    <string name="game_label_id">ID: </string>
    <string name="game_label_description">Description: </string>
    <string name="game_label_developer">Developer: </string>
    <string name="game_label_publisher">Publisher: </string>
    <string name="game_label_releasedate">Release Date: </string>
    <string name="game_label_minplayers">Minimum # Players: </string>
    <string name="game_label_maxplayers">Maximum # Players: </string>
    <string name="game_label_approved">Approved: </string>

    <!-- General Strings for buttons -->
    <string name="back_button_text">Back</string>
    <string name="submit_button_text">Submit</string>
    <string name="reset_button_text">Reset</string>
    <string name="save_button_text">Save</string> <!-- Save button is used on the Settings page [53] -->

    <!-- Strings for the Navigation Drawer -->
    <string name="navigation_drawer_header_subtitle">Find Gaming Events IRL</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_drawer_item_events">Events</string>
    <string name="nav_drawer_item_gameslist">Games List</string>
    <string name="nav_drawer_item_settings">Settings</string>
</resources>