<?xml version="1.0" encoding="utf-8"?>
<!-- Dialog Relative Layout and Button structure from GeeksforGeeks tutorial on creating Dialogs [48] -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/filter_header"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

        <!-- UI elements for Developer filter -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:id="@+id/developer_filter_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/game_filter_developer_header"
                android:layout_gravity="center_horizontal"
                />

            <!--
                Dropdown spinner for the Developer [12]
                The entries will be dynamically generated by what is in the database
            -->
            <Spinner
                android:id="@+id/spinner_filter_developer"
                android:layout_width="130dp"
                android:layout_height="48dp"

                android:prompt="@string/game_filter_developer_prompt"
                android:spinnerMode="dropdown"
                />

        </LinearLayout>

        <!-- UI elements for Publisher filter -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:id="@+id/publisher_filter_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/game_filter_publisher_header"
                android:layout_gravity="center_horizontal"
                />

            <!--
                Dropdown spinner for the Publisher [12]
                The entries will be dynamically generated by what is in the database
            -->
            <Spinner
                android:id="@+id/spinner_filter_publisher"
                android:layout_width="130dp"
                android:layout_height="48dp"

                android:prompt="@string/game_filter_publisher_prompt"
                android:spinnerMode="dropdown"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <!-- UI elements for Min Players filter -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                >

                <TextView
                    android:id="@+id/minplayers_filter_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/game_filter_minplayers_header"
                    android:layout_gravity="center_horizontal"
                    />

                <!-- Dropdown spinner for the Min Players [12] -->
                <Spinner
                    android:id="@+id/spinner_filter_minplayers"
                    android:layout_width="130dp"
                    android:layout_height="48dp"

                    android:entries="@array/number_of_players"
                    android:prompt="@string/game_filter_minmaxplayers_prompt"
                    android:spinnerMode="dropdown"
                    />

            </LinearLayout>

            <!-- UI elements for Max Players filter -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                >

                <TextView
                    android:id="@+id/maxplayers_filter_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/game_filter_maxplayers_header"
                    android:layout_gravity="center_horizontal"
                    />

                <!-- Dropdown spinner for the Max Players [12] -->
                <Spinner
                    android:id="@+id/spinner_filter_maxplayers"
                    android:layout_width="130dp"
                    android:layout_height="48dp"

                    android:entries="@array/number_of_players"
                    android:prompt="@string/game_filter_minmaxplayers_prompt"
                    android:spinnerMode="dropdown"
                    />

            </LinearLayout>

        </LinearLayout>

        <!-- UI elements for Approved filter -->
        <LinearLayout
            android:id="@+id/group_for_approved_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:id="@+id/approved_filter_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/game_filter_approved_header"
                android:layout_gravity="center_horizontal"
                />

            <!-- Dropdown spinner for the Approved status [12] -->
            <Spinner
                android:id="@+id/spinner_filter_approved"
                android:layout_width="130dp"
                android:layout_height="48dp"

                android:entries="@array/approved_statuses"
                android:prompt="@string/game_filter_approved_prompt"
                android:spinnerMode="dropdown"
                />

        </LinearLayout>

        <!-- The OK and Cancel buttons for the Filter Dialog -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            >

            <Button
                android:id="@+id/filter_ok_button"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/filter_ok_text"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                />

            <Button
                android:id="@+id/filter_cancel_button"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/filter_cancel_text"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>