<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GameDetailsActivity"
    >

    <TextView
        android:id="@+id/game_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="3sp"
        android:layout_marginTop="130dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginRight="250dp"
            >

            <TextView
                android:id="@+id/game_details_label_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/game_label_id"
                android:layout_marginRight="5dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/game_details_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                />

        </LinearLayout>

        <Button
            android:id="@+id/back_button"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:elevation="20dp"
            android:text="@string/back_button_text"
            android:textAlignment="center"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/game_details_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="3sp"
        >

        <TextView
            android:id="@+id/game_details_label_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="20sp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/game_label_developer"
            />

        <TextView
            android:id="@+id/game_details_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/game_details_label_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/game_label_publisher"
            />

        <TextView
            android:id="@+id/game_details_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/game_details_label_releasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/game_label_releasedate"
            />

        <TextView
            android:id="@+id/game_details_releasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:textSize="16sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/game_details_label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="15sp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/game_label_description"
        />

    <TextView
        android:id="@+id/game_details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="15sp"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="3sp"
        >

        <TextView
            android:id="@+id/game_details_label_minplayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/game_label_minplayers"
            />

        <TextView
            android:id="@+id/game_details_minplayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15sp"
        >

        <TextView
            android:id="@+id/game_details_label_maxplayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/game_label_maxplayers"
            />

        <TextView
            android:id="@+id/game_details_maxplayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="3sp"
        >

        <TextView
            android:id="@+id/game_details_label_approved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/game_label_approved"
            />

        <TextView
            android:id="@+id/game_details_approved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:textSize="16sp"
            />

    </LinearLayout>

    <!-- LinearLayout to contain the admin buttons that will be dynamically shown based on the user's role -->
    <LinearLayout
        android:id="@+id/admin_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/approvegame_button"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:elevation="20dp"
            android:textAlignment="center"
            android:text="@string/activity_gamedetails_approvegamerequest_button_text"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="10dp"

            />

        <Button
            android:id="@+id/updategame_button"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:elevation="20dp"
            android:textAlignment="center"
            android:text="@string/activity_gamedetails_updategamerequest_button_text"
            android:visibility="gone"
            android:clickable="false"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/deletegame_button"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:elevation="20dp"
            android:textAlignment="center"
            android:text="@string/activity_gamedetails_deletegame_button_text"
            android:visibility="gone"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </LinearLayout>

</LinearLayout>